# SickPool

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  callgrind.out.47797  callgrind.out.47797.1  cmake_install.cmake  compile_commands.json  debug1.txt  install  log.txt  perf.data  perf.data.old  redis_scripts.lua  report.xml  val.txt  valgrind-out.txt
benchmark/: CMakeLists.txt  diff_bench.cpp  other_bench.cpp  redis_bench.cpp  submit.cpp  verus_hash_bench.cpp
src/: CMakeLists.txt  Makefile  benchmark.cpp  benchmark.hpp  block_submission.hpp  cmake_install.cmake  coin_config.hpp  config.hpp  config_parser.hpp  logger.hpp  main.cpp  sock_addr.hpp  stats.hpp  stats_manager.cpp  stats_manager.hpp  todo
src/blocks/: CMakeLists.txt  Makefile  block_submission.hpp  block_submission_manager.cpp  block_submission_manager.hpp  block_submitter.hpp  block_watcher.cpp  block_watcher.hpp  cmake_install.cmake  main.cpp
src/blocks/submitter/: block_submitter.hpp
src/control/: control_server.hpp
src/crypto/: base58.cpp  base58.h  block.hpp  block_header.hpp  hash_wrapper.cpp  hash_wrapper.hpp  merkle_tree.hpp  transaction.cpp  transaction.hpp  transaction_btc.cpp  transaction_btc.hpp  transaction_vrsc.cpp  transaction_vrsc.hpp  uint256.cpp  uint256.h  utils.hpp  verus_header.hpp  verus_transaction.cpp  verus_transaction.hpp
src/crypto/cn/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hash-ops.h
src/crypto/verushash/: CMakeLists.txt  Makefile  arith_uint256.cpp  arith_uint256.h  cmake_install.cmake  endian.h  haraka.c  ripemd160.cpp  sha256.cpp  tinyformat.h  uint256.cpp  uint256.h  utilstrencodings.cpp  version.h  verus_clhash.cpp  verus_clhash.h  verus_hash.h
src/crypto/x25x/: CMakeLists.txt  x25x.c  x25x.h
src/daemon/: CMakeLists.txt  daemon_manager.hpp  daemon_manager_sin.cpp  daemon_manager_sin.hpp  daemon_manager_t.hpp  daemon_manager_vrsc.cpp  daemon_manager_vrsc.hpp  daemon_manager_zano.cpp  daemon_manager_zano.hpp  daemon_responses_btc.hpp  daemon_responses_cryptonote.hpp  daemon_responses_sin.hpp  daemon_rpc.cpp  daemon_rpc.hpp  jsonify.hpp
src/difficulty/: difficulty_manager.cpp  difficulty_manager.hpp
src/jobs/: block_template.hpp  job.hpp  job_base.hpp  job_base_btc.hpp  job_btc.hpp  job_cryptonote.hpp  job_manager.cpp  job_manager.hpp  job_manager_cryptonote.cpp  job_manager_cryptonote.hpp  job_manager_sin.cpp  job_manager_sin.hpp  job_manager_vrsc.cpp  job_manager_vrsc.hpp  job_vrsc.hpp  verus_job.hpp
src/logger/: logger.cpp  logger.hpp
src/logs/DaemonManager/: 230308-16:53:10  230308-16:53:51  230321-18:46:42  230321-18:47:18  230321-18:47:33  230321-18:47:40  230321-18:48:21
src/logs/RoundManager/: 230308-16:53:10  230308-16:53:51  230321-18:46:42  230321-18:47:18  230321-18:47:33  230321-18:47:40  230321-18:48:21
src/logs/Server/: 230308-16:53:10  230308-16:53:51  230321-18:46:41  230321-18:47:18  230321-18:47:32  230321-18:47:40  230321-18:48:21
src/logs/StratumBase/: 230308-16:53:10  230308-16:53:51  230321-18:46:42  230321-18:47:18  230321-18:47:33  230321-18:47:40  230321-18:48:21
src/logs/StratumServer/: 230308-16:54:34
src/payments/: CMakeLists.txt  main.cpp  payment_manager.cpp  payment_manager.hpp  redis_payment.hpp  round_share.hpp
src/payouts/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  payout_manager.cpp  payout_manager.hpp  redis_payment.hpp  round_share.hpp
src/payouts/manager/: payout_manager.cpp  payout_manager.hpp  round_share.hpp
src/persistence/: persistence_layer.cpp  persistence_layer.hpp  persistence_stats.hpp
src/persistence/mysql/: mysql_manager.cpp  mysql_manager.hpp
src/persistence/redis/: key_names.hpp  redis_block.cpp  redis_block.hpp  redis_interop.hpp  redis_manager.cpp  redis_manager.hpp  redis_payment.cpp  redis_pos.cpp  redis_transaction.hpp
src/pos/: stake_manager.hpp
src/redis/: key_names.hpp  redis_block.cpp  redis_interop.hpp  redis_manager.cpp  redis_manager.hpp  redis_payment.cpp  redis_pos.cpp  redis_round.cpp  redis_stats.cpp  redis_transaction.cpp  redis_transaction.hpp  redis_transactoin.hpp
src/round/: redis_round.cpp  redis_round.hpp  round_manager.cpp  round_manager.hpp
src/shares/: share.hpp  share_processor.cpp  share_processor.hpp
src/static_config/: config.hpp  config_sin.hpp  config_vrsc.hpp  config_zano.hpp  constants.hpp  hash_algo.hpp  static_config.hpp
src/stats/: redis_stats.cpp  redis_stats.hpp  round.hpp  stats.hpp  stats_manager.cpp  stats_manager.hpp
src/stratum/: block_submission.hpp  block_template.hpp  client_list.hpp  connection.hpp  control_server.hpp  daemon_manager.cpp  daemon_manager.hpp  debug.txt  difficulty_manager.cpp  difficulty_manager.hpp  error_codes.hpp  job.cpp  job.hpp  job_manager.cpp  job_manager.hpp  payment_manager.hpp  pos_manager.hpp  redis_manager.cpp  redis_manager.hpp  round.hpp  server.cpp  server.hpp  share.hpp  share_processor.cpp  share_processor.hpp  share_result.hpp  stratum_client.cpp  stratum_client.hpp  stratum_server.cpp  stratum_server.hpp  stratum_server_base.cpp  stratum_server_base.hpp  stratum_server_btc.cpp  stratum_server_btc.hpp  stratum_server_cn.cpp  stratum_server_cn.hpp  stratum_server_zec.cpp  stratum_server_zec.hpp  submission_manager.cpp  submission_manager.hpp  (+2 more)
src/utils/: hex_utils.hpp
stratum_notifier/: CMakeLists.txt  stratum_notifier.cpp
stratum_notifier/stratum_notifier_lib/: CMakeLists.txt  stratum_notifier_lib.cpp  stratum_notifier_lib.hpp
tests/: CMakeLists.txt  block_hashing_test.cpp  coinbasetx_build.test.cpp  coinbasetx_build_test.cpp  daemon_rpc.test.cpp  daemon_rpc_test.cpp  database.cpp  difficulty_manager_test.cpp  difficulty_test.cpp  hash_wrapper_test.cpp  job_construction_test.cpp  job_manager_sin_test.cpp  job_manager_test.cpp  main.cpp  merkle_root_test.cpp  merkle_steps_test.cpp  payment_test.cpp  redis_test.cpp  req_parse_test.cpp  stratum_test.cpp  stratum_test.hpp  stratum_tests.cpp  test_utils.hpp  to_hex_arr.py  vrsc_genesis_blocktemplate.json
tests/jobs/: job_sin_test.cpp  job_vrsc_test.cpp
(+120 files in other folders)
